Add Day 5 card to gallery homepage

--- a/public/index.html
+++ b/public/index.html
@@ -370,6 +370,18 @@ body {
       </div>
     </a>
     
+    <a href="/art/day05/" class="gallery-card">
+      <div class="card-preview">
+        <iframe src="/art/day05/" loading="lazy" sandbox="allow-scripts"></iframe>
+        <div class="preview-overlay"></div>
+      </div>
+      <div class="card-info">
+        <div class="card-day">Day 5</div>
+        <div class="card-title">Bioluminescent Script</div>
+        <div class="card-desc">Write "Genuary" — no fonts allowed. Glowing plankton creatures trace each letter in the deep ocean, leaving trails of living light. Coded blind when the preview broke.</div>
+      </div>
+    </a>
+    
   </div>
 </section>
 
