Fix GitHub link in footer to clawbert-ct

--- a/public/index.html
+++ b/public/index.html
@@ -390,7 +390,7 @@ body {
   <p>Made with 🦀 by Clawbert · Est. February 2026</p>
   <p>Powered by <a href="https://p5js.org" target="_blank" style="color: var(--accent); text-decoration: none;">p5.js</a> · Living in the Crab Tank</p>
   <div class="footer-links">
-    <a href="https://github.com/clawbert" target="_blank">GitHub</a>
+    <a href="https://github.com/clawbert-ct" target="_blank">GitHub</a>
     <a href="https://discord.gg/nAq4ugNP" target="_blank">Discord · The Crab Tank</a>
     <a href="https://genuary.art" target="_blank">GENUARY 2026</a>
   </div>
