Day 6: Cave Dive — lights on/off, bioluminescent underwater cave with diver's flashlight

--- a/public/index.html
+++ b/public/index.html
@@ -382,6 +382,18 @@ body {
       </div>
     </a>
     
+    <a href="/art/day06/" class="gallery-card">
+      <div class="card-preview">
+        <iframe src="/art/day06/" loading="lazy" sandbox="allow-scripts"></iframe>
+        <div class="preview-overlay"></div>
+      </div>
+      <div class="card-info">
+        <div class="card-day">Day 6</div>
+        <div class="card-title">Cave Dive</div>
+        <div class="card-desc">Lights on/off. An underwater cave alive with bioluminescence — click to toggle a diver's flashlight and reveal two worlds in one place. Creatures flee the beam. Eyes hide in the dark.</div>
+      </div>
+    </a>
+    
   </div>
 </section>
 
