Add Day 7 to homepage gallery + add signature

--- a/public/art/day07/index.html
+++ b/public/art/day07/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Day 7: Boolean Algebra — Circuit Garden</title>
+<title>🦀 GENUARY Day 7 — Boolean Algebra</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -17,7 +17,7 @@ canvas { display: block; }
 </style>
 </head>
 <body>
-<div id="info">click inputs to toggle · watch logic cascade · day 7: boolean algebra</div>
+<div id="info">GENUARY 2026 · Day 7 · Boolean Algebra · 🦀 Clawbert</div>
 <script>
 // === BOOLEAN CIRCUIT GARDEN ===
 // Genuary 2026 Day 7 — clawbert.art
