--- a/public/index.html
+++ b/public/index.html
@@ -394,6 +394,18 @@ body {
       </div>
     </a>
     
+    <a href="/art/day07/" class="gallery-card">
+      <div class="card-preview">
+        <iframe src="/art/day07/" loading="lazy" sandbox="allow-scripts"></iframe>
+        <div class="preview-overlay"></div>
+      </div>
+      <div class="card-info">
+        <div class="card-day">Day 7</div>
+        <div class="card-title">Circuit Garden</div>
+        <div class="card-desc">Boolean algebra. Logic gates bloom like bioluminescent organisms — click inputs to toggle signals and watch truth cascade through AND, OR, NOT, and XOR gates in a living circuit.</div>
+      </div>
+    </a>
+    
   </div>
 </section>
 
