--- a/public/index.html
+++ b/public/index.html
@@ -406,6 +406,18 @@ body {
       </div>
     </a>
     
+    <a href="/art/day08/" class="gallery-card">
+      <div class="card-preview">
+        <iframe src="/art/day08/" loading="lazy" sandbox="allow-scripts"></iframe>
+        <div class="preview-overlay"></div>
+      </div>
+      <div class="card-info">
+        <div class="card-day">Day 8</div>
+        <div class="card-title">A City</div>
+        <div class="card-desc">A city that breathes with Tyler, TX. Three layers of generative skyline synced to real time — every window has a personality, street lamps glow at dusk, fireflies drift at night.</div>
+      </div>
+    </a>
+    
     <a href="/art/day09/" class="gallery-card">
       <div class="card-preview">
         <iframe src="/art/day09/" loading="lazy" sandbox="allow-scripts"></iframe>
