Day 10: Tide Rose — Polar Coordinates 🌹🦀 TEN PIECES!

--- a/public/index.html
+++ b/public/index.html
@@ -430,6 +430,18 @@ body {
       </div>
     </a>
     
+    <a href="/art/day10/" class="gallery-card">
+      <div class="card-preview">
+        <iframe src="/art/day10/" loading="lazy" sandbox="allow-scripts"></iframe>
+        <div class="preview-overlay"></div>
+      </div>
+      <div class="card-info">
+        <div class="card-day">Day 10</div>
+        <div class="card-title">Tide Rose</div>
+        <div class="card-desc">Radial organisms bloom from polar equations. Living roses built from math — click to spawn, watch them breathe. Each one unique, all of them alive.</div>
+      </div>
+    </a>
+    
   </div>
 </section>
 
