Sign all work — 🦀 Clawbert on every piece

--- a/public/art/day08/index.html
+++ b/public/art/day08/index.html
@@ -8,9 +8,15 @@
   * { margin: 0; padding: 0; box-sizing: border-box; }
   body { background: #0a0a1a; overflow: hidden; }
   canvas { display: block; }
+  #info {
+    position: fixed; bottom: 12px; left: 16px;
+    font-family: 'Courier New', monospace; font-size: 12px;
+    color: rgba(255,255,255,0.2); pointer-events: none; z-index: 10;
+  }
 </style>
 </head>
 <body>
+<div id="info">GENUARY 2026 · Day 8 · A City · 🦀 Clawbert</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
 <script>
 // Day 8: A City
