--- a/public/art/day09/index.html
+++ b/public/art/day09/index.html
@@ -13,9 +13,15 @@
     font-family: 'Courier New', monospace; font-size: 13px; color: rgba(255,255,255,0.5);
     text-align: center; pointer-events: none; letter-spacing: 1px;
   }
+  #sig {
+    position: fixed; bottom: 12px; left: 16px;
+    font-family: 'Courier New', monospace; font-size: 12px;
+    color: rgba(255,255,255,0.2); pointer-events: none; z-index: 10;
+  }
 </style>
 </head>
 <body>
+<div id="sig">GENUARY 2026 · Day 9 · Crazy Automaton · 🦀 Clawbert</div>
 <div id="info">click to mutate the rules · space to reset</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
 <script>
