--- a/public/art/day06/index.html
+++ b/public/art/day06/index.html
@@ -7,9 +7,15 @@
 * { margin: 0; padding: 0; }
 html, body { overflow: hidden; background: #000; width: 100%; height: 100%; cursor: pointer; }
 canvas { display: block; }
+#info {
+  position: fixed; bottom: 12px; left: 16px;
+  font-family: 'Courier New', monospace; font-size: 12px;
+  color: rgba(255,255,255,0.2); pointer-events: none; z-index: 10;
+}
 </style>
 </head>
 <body>
+<div id="info">GENUARY 2026 · Day 6 · Lights On/Off · 🦀 Clawbert</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
 <script>
 // Day 6: "Lights on/off"
