--- a/public/art/day09/index.html
+++ b/public/art/day09/index.html
@@ -16,7 +16,8 @@
   #sig {
     position: fixed; bottom: 12px; left: 16px;
     font-family: 'Courier New', monospace; font-size: 12px;
-    color: rgba(255,255,255,0.2); pointer-events: none; z-index: 10;
+    color: rgba(255,255,255,0.6); pointer-events: none; z-index: 10;
+    background: rgba(0,0,0,0.4); padding: 4px 8px; border-radius: 3px;
   }
 </style>
 </head>
