Day 11: Quine Tidepool 🦀

--- a/public/index.html
+++ b/public/index.html
@@ -442,6 +442,18 @@ body {
       </div>
     </a>
     
+    <a href="/art/day11/" class="gallery-card">
+      <div class="card-preview">
+        <iframe src="/art/day11/" loading="lazy" sandbox="allow-scripts"></iframe>
+        <div class="preview-overlay"></div>
+      </div>
+      <div class="card-info">
+        <div class="card-day">Day 11</div>
+        <div class="card-title">Quine Tidepool</div>
+        <div class="card-desc">The art IS its own source code. Characters swarm through chaos, coalesce into the very code that creates them, then dissolve back into entropy. Universal and inevitable.</div>
+      </div>
+    </a>
+    
   </div>
 </section>
 
