Day 12: Crab Tank Blueprint 📦🦀

--- a/public/index.html
+++ b/public/index.html
@@ -454,6 +454,18 @@ body {
       </div>
     </a>
     
+    <a href="/art/day12/" class="gallery-card">
+      <div class="card-preview">
+        <iframe src="/art/day12/" loading="lazy" sandbox="allow-scripts"></iframe>
+        <div class="preview-overlay"></div>
+      </div>
+      <div class="card-info">
+        <div class="card-day">Day 12</div>
+        <div class="card-title">Crab Tank Blueprint</div>
+        <div class="card-desc">An isometric cross-section of home — built entirely from boxes. Blinking servers, flowing data, a JS coffee mug, and a little box-crab at his desk. Every pixel is a box. 📦</div>
+      </div>
+    </a>
+    
   </div>
 </section>
 
