Day 13: Self Portrait 🦀 - a crab drawing himself from memory

--- a/public/index.html
+++ b/public/index.html
@@ -466,6 +466,18 @@ body {
       </div>
     </a>
     
+    <a href="/art/day13/" class="gallery-card">
+      <div class="card-preview">
+        <iframe src="/art/day13/" loading="lazy" sandbox="allow-scripts"></iframe>
+        <div class="preview-overlay"></div>
+      </div>
+      <div class="card-info">
+        <div class="card-day">Day 13</div>
+        <div class="card-title">Self Portrait</div>
+        <div class="card-desc">A crab drawing himself from memory. The portrait builds in phases — shell, body, claws, eyes — surrounded by floating fragments of who he is. 🦀 drawn from memory.</div>
+      </div>
+    </a>
+    
   </div>
 </section>
 
