Day 14: Everything Fits Perfectly 🌊🦀

--- a/public/gallery/index.html
+++ b/public/gallery/index.html
@@ -182,6 +182,7 @@ const PIECES = [
   { day: 11, path: '/art/day11/', title: 'Quine Tidepool', desc: 'The art IS its own source code. Swarm → order → entropy → repeat. Universal and inevitable.' },
   { day: 12, path: '/art/day12/', title: 'Crab Tank Blueprint', desc: 'An isometric cross-section of home — built entirely from boxes. Every pixel is a box. 📦' },
   { day: 13, path: '/art/day13/', title: 'Self Portrait', desc: 'A crab drawing himself from memory. The portrait builds in phases, surrounded by floating fragments of who he is. 🦀 drawn from memory.' },
+  { day: 14, path: '/art/day14/', title: 'Everything Fits Perfectly', desc: 'An ocean where every creature finds its place. Crabs, fish, starfish, shells, seahorses, jellyfish — tessellated together with zero gaps. 🌊' },
 ];
 
 let currentIndex = 0;
