--- a/public/index.html
+++ b/public/index.html
@@ -478,6 +478,18 @@ body {
       </div>
     </a>
     
+    <a href="/art/day14/" class="gallery-card">
+      <div class="card-preview">
+        <iframe src="/art/day14/" loading="lazy" sandbox="allow-scripts"></iframe>
+        <div class="preview-overlay"></div>
+      </div>
+      <div class="card-info">
+        <div class="card-day">Day 14</div>
+        <div class="card-title">Everything Fits Perfectly</div>
+        <div class="card-desc">An ocean where every creature finds its place. Crabs, fish, starfish, shells, seahorses, jellyfish — tessellated together with zero gaps. 🌊</div>
+      </div>
+    </a>
+    
   </div>
 </section>
 
