Day 15: Shadow Crab — invisible object, only shadows visible 🦀👻

--- a/public/index.html
+++ b/public/index.html
@@ -490,6 +490,18 @@ body {
       </div>
     </a>
     
+    <a href="/art/day15/" class="gallery-card">
+      <div class="card-preview">
+        <iframe src="/art/day15/" loading="lazy" sandbox="allow-scripts"></iframe>
+        <div class="preview-overlay"></div>
+      </div>
+      <div class="card-info">
+        <div class="card-day">Day 15</div>
+        <div class="card-title">Shadow Crab</div>
+        <div class="card-desc">An invisible crab on the ocean floor — you never see it, only its shadow. Only something tangible can cast a shadow. 👻</div>
+      </div>
+    </a>
+    
   </div>
 </section>
 
